--- a/Photos Sharing App/Base.lproj/Main.storyboard
+++ b/Photos Sharing App/Base.lproj/Main.storyboard
@@ -1,24 +1,95 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Photos_Sharing_App" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0hI-Xr-t5M">
+                                <rect key="frame" x="175" y="797" width="64" height="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="35" id="YAE-nd-fh6"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="PICK">
+                                    <fontDescription key="titleFontDescription" type="boldSystem" pointSize="17"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="pickButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ylf-Uo-vgo"/>
+                                </connections>
+                            </button>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="z8k-vG-0XV">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="767"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="urd-3w-zXh">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="767"/>
+                                    </imageView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="urd-3w-zXh" firstAttribute="bottom" secondItem="Qbc-ef-SP5" secondAttribute="bottom" id="HEL-W9-eqv"/>
+                                    <constraint firstItem="urd-3w-zXh" firstAttribute="leading" secondItem="Qbc-ef-SP5" secondAttribute="leading" id="IQH-pZ-qYl"/>
+                                    <constraint firstAttribute="trailing" secondItem="urd-3w-zXh" secondAttribute="trailing" id="f3F-0r-cHM"/>
+                                    <constraint firstAttribute="bottom" secondItem="urd-3w-zXh" secondAttribute="bottom" id="jDK-hD-9HB"/>
+                                    <constraint firstItem="urd-3w-zXh" firstAttribute="trailing" secondItem="Qbc-ef-SP5" secondAttribute="trailing" id="rlw-Mu-CnH"/>
+                                    <constraint firstItem="urd-3w-zXh" firstAttribute="top" secondItem="Qbc-ef-SP5" secondAttribute="top" id="sfd-BV-VyW"/>
+                                </constraints>
+                                <viewLayoutGuide key="contentLayoutGuide" id="v4y-Lz-llY"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="Qbc-ef-SP5"/>
+                                <connections>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="erA-yf-pJ6"/>
+                                </connections>
+                            </scrollView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BxG-K5-bwE">
+                                <rect key="frame" x="332" y="797" width="62" height="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="35" id="6gF-iC-d42"/>
+                                    <constraint firstAttribute="width" constant="62" id="KOK-rB-ycq"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Share"/>
+                                <connections>
+                                    <action selector="shareAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="F71-ww-ojx"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="0hI-Xr-t5M" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="BfC-hV-SoW"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="BxG-K5-bwE" secondAttribute="trailing" constant="20" id="MAp-f2-SZA"/>
+                            <constraint firstItem="BxG-K5-bwE" firstAttribute="top" secondItem="urd-3w-zXh" secondAttribute="bottom" constant="30" id="Nul-an-SdY"/>
+                            <constraint firstItem="z8k-vG-0XV" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="O7p-Yh-AkM"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="0hI-Xr-t5M" secondAttribute="bottom" constant="30" id="VdQ-Br-2H4"/>
+                            <constraint firstItem="0hI-Xr-t5M" firstAttribute="top" secondItem="z8k-vG-0XV" secondAttribute="bottom" constant="30" id="eLx-r6-Keq"/>
+                            <constraint firstItem="z8k-vG-0XV" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="lJi-BC-dGS"/>
+                            <constraint firstItem="z8k-vG-0XV" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="yay-nb-e7B"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="imageView" destination="urd-3w-zXh" id="wuk-ao-ZXe"/>
+                        <outlet property="pickButton" destination="0hI-Xr-t5M" id="kwN-lG-Qu6"/>
+                        <outlet property="scrollView" destination="z8k-vG-0XV" id="o53-go-8W9"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="18.840579710144929" y="83.705357142857139"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
